[gd_scene load_steps=14 format=2]

[ext_resource path="res://ui/theme/fonts/PixelOperator.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://_debug/ship-panel/ship-panel.gd" type="Script" id=2]
[ext_resource path="res://_debug/ship-panel/diagnostics-panel.tscn" type="PackedScene" id=3]
[ext_resource path="res://_debug/ship-panel/inventory-panel.tscn" type="PackedScene" id=4]
[ext_resource path="res://_debug/ship-panel/controls-panel.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )
Button/styles/focus = SubResource( 6 )
Button/styles/hover = SubResource( 6 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 7 )

[sub_resource type="StyleBoxLine" id=2]
color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxLine" id=8]
color = Color( 1, 1, 1, 1 )
vertical = true

[node name="ShipPanel" type="CanvasLayer" groups=["ship_panel"]]
script = ExtResource( 2 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 30.0
margin_right = -120.0
margin_bottom = -30.0
custom_styles/panel = SubResource( 1 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 128.0
margin_top = 38.0
margin_right = -128.0
margin_bottom = -38.0
theme = SubResource( 5 )

[node name="Content" type="VBoxContainer" parent="Margin"]
margin_right = 384.0
margin_bottom = 284.0

[node name="TitleBar" type="HBoxContainer" parent="Margin/Content"]
margin_right = 384.0
margin_bottom = 16.0

[node name="Title" type="Label" parent="Margin/Content/TitleBar"]
margin_right = 365.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "shipOS"

[node name="CloseButton" type="Button" parent="Margin/Content/TitleBar"]
margin_left = 369.0
margin_right = 384.0
margin_bottom = 16.0
text = " x "

[node name="Separator" type="HSeparator" parent="Margin/Content"]
margin_top = 20.0
margin_right = 384.0
margin_bottom = 24.0
custom_styles/separator = SubResource( 2 )

[node name="NavigationBar" type="HBoxContainer" parent="Margin/Content"]
margin_top = 28.0
margin_right = 384.0
margin_bottom = 44.0

[node name="DiagnosticsButton" type="Button" parent="Margin/Content/NavigationBar"]
margin_right = 120.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "Diagnostics"

[node name="Separator" type="VSeparator" parent="Margin/Content/NavigationBar"]
margin_left = 124.0
margin_right = 128.0
margin_bottom = 16.0
custom_styles/separator = SubResource( 8 )

[node name="InventoryButton" type="Button" parent="Margin/Content/NavigationBar"]
margin_left = 132.0
margin_right = 252.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "Inventory"

[node name="Separator2" type="VSeparator" parent="Margin/Content/NavigationBar"]
margin_left = 256.0
margin_right = 260.0
margin_bottom = 16.0
custom_styles/separator = SubResource( 8 )

[node name="ControlsButton" type="Button" parent="Margin/Content/NavigationBar"]
margin_left = 264.0
margin_right = 384.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "Controls"

[node name="Separator2" type="HSeparator" parent="Margin/Content"]
margin_top = 48.0
margin_right = 384.0
margin_bottom = 52.0
custom_styles/separator = SubResource( 2 )

[node name="DiagnosticsPanel" parent="Margin/Content" instance=ExtResource( 3 )]
visible = false

[node name="InventoryList" parent="Margin/Content" instance=ExtResource( 4 )]
visible = false
margin_top = 56.0
margin_right = 384.0
margin_bottom = 56.0

[node name="ControlsPanel" parent="Margin/Content" instance=ExtResource( 5 )]
visible = false
margin_top = 56.0
margin_right = 384.0
margin_bottom = 172.0

[connection signal="pressed" from="Margin/Content/TitleBar/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="Margin/Content/NavigationBar/DiagnosticsButton" to="." method="_on_DiagnosticsButton_pressed"]
[connection signal="pressed" from="Margin/Content/NavigationBar/InventoryButton" to="." method="_on_InventoryButton_pressed"]
[connection signal="pressed" from="Margin/Content/NavigationBar/ControlsButton" to="." method="_on_ControlsButton_pressed"]
